# syntalos-archiver

./: README.md  meson.build
src/: main.cpp  meson.build  sqfs-fstree.c  sqfs-fstree.h  sqfs-simple-writer.c  sqfs-simple-writer.h
